manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mymtnshop-api-ingress
  namespace: nextgen-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: mymtnshop-api
              servicePort: "80"
            path: /shop/(.*)
